# miniGU

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  user-guide.md  wasm.md
docs/wasm-demo/: index.html  main.js  style.css
minigu-cli/src/shell/: context.rs
minigu-test/gql/ddl/: create_graph.gql  create_graph@e2e.snap  create_graph@parser.snap  ddl_drop.gql  ddl_drop@e2e.snap  ddl_drop@parser.snap  ddl_truncate@e2e.snap
minigu-test/gql/dml/: dml_dql@e2e.snap
minigu-wasm/: Cargo.toml
minigu-wasm/src/: lib.rs
minigu-wasm/tests/: wasm_browser.rs  wasm_node.rs
minigu/catalog/src/: lib.rs
minigu/catalog/src/memory/: schema.rs
minigu/context/: Cargo.toml
minigu/context/src/: database.rs  lib.rs  runtime.rs
minigu/core/: Cargo.toml
minigu/core/src/: database.rs  error.rs  session.rs
minigu/core/src/procedures/: create_test_graph.rs  create_test_graph_data.rs  export_graph.rs  import_graph.rs  mod.rs
minigu/gql/execution/: Cargo.toml
minigu/gql/execution/src/: builder.rs
minigu/gql/execution/src/executor/: catalog_modify.rs  mod.rs  procedure_call.rs
minigu/gql/planner/src/binder/: catalog.rs  error.rs  mod.rs  type_element.rs
minigu/gql/planner/src/bound/: catalog.rs  type_element.rs
minigu/gql/planner/src/logical_planner/: catalog.rs
minigu/gql/planner/src/optimizer/: mod.rs
minigu/gql/planner/src/plan/: catalog_modify.rs  mod.rs
minigu/storage/: Cargo.toml
minigu/storage/src/: error.rs  lib.rs
minigu/storage/src/ap/: mod.rs  olap_graph.rs  olap_storage.rs  transaction.rs
minigu/storage/src/ap/iterators/: adjacency_iterator.rs  edge_iterator.rs
minigu/storage/src/tp/: memory_graph.rs  mod.rs  transaction.rs  txn_manager.rs
minigu/storage/src/tp/iterators/: adjacency_iterator.rs  edge_iterator.rs  vertex_iterator.rs
minigu/storage/tests/ap/: ap_graph_test.rs  mod.rs  transaction_test.rs
minigu/storage/tests/tp/: tp_graph_test.rs
minigu/transaction/src/: lib.rs  transaction.rs
scripts/: serve_wasm_demo.sh
