[package]
edition.workspace = true
license.workspace = true
name = "minigu-context"
repository.workspace = true
version.workspace = true

[dependencies]
gql-parser = { workspace = true }
miette = { workspace = true }
minigu-catalog = { workspace = true }
minigu-common = { workspace = true }
minigu-storage = { workspace = true }
minigu-transaction = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[lints]
workspace = true
